profilelist1exp/unpackaged/objects/CSMB_Terms_and_Conditions_Maintenance__c.object
<CustomObject>
    <description>CSMB Terms and Conditions Maintenance for storing Standard Terms and Conditions Repository</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Definition of each term</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region where the terms and conditions are applicable</description>
        <inlineHelpText>Region where the terms and conditions are applicable.</inlineHelpText>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>ROAPJ</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Status of the terms and conditions.</description>
        <inlineHelpText>Uncheck the checkbox if the Terms and conditions are not active anymore.</inlineHelpText>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <label>CSMB T &amp; C Maintenance</label>
    <nameField>
        <label>Standard Terms</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSMB T &amp; C Maintenance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>